--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <div id="browserContainer">
-    <input type="text" id="urlInput" placeholder="https://example.com">
+    <input type="text" id="urlInput" placeholder="Escribe una URL aquí">
     <button id="goBtn">Ir</button>
     <iframe id="webview"></iframe>
   </div>
